--- a/styles/components/insights.css
+++ b/styles/components/insights.css
@@ -58,7 +58,7 @@
 
 .insight-item p {
   margin: 4.5px 0 0;
-  color: #000000;
+  color: var(--text-color);
 }
 
 .insight-content {
@@ -105,7 +105,8 @@
 
 .insight-time {
   font-size: 1.5em;
-  color: gray;
+  color: var(--text-color);
+  opacity: 0.7;
   margin-top: 9px;
 }
 
@@ -133,7 +134,8 @@
 
   .insight-time {
     font-size: 1.5em;
-    color: gray;
+    color: var(--text-color);
+    opacity: 0.7;
     margin-top: 9px;
   }
 }
