--- a/styles/main.css
+++ b/styles/main.css
@@ -1,21 +1,14 @@
 /* Main CSS File - Imports all modular CSS components */
+@import "tailwindcss";
+@plugin "daisyui";
 
 /* Base Styles */
 @import "./variables.css";
 @import "./global.css";
 @import "./layout.css";
-@import "./animations.css";
+
 
 /* Component Styles */
-@import "./components/about.css";
 @import "./components/terminal.css";
-@import "./components/gallery.css";
-@import "./components/projects.css";
-@import "./components/insights.css";
 @import "./components/social.css";
 @import "./components/bookshelf.css";
-@import "./components/journey.css";
-@import "./components/passions.css";
-
-/* responsive.css */
-@import "./responsive.css";
