--- a/styles/global.css
+++ b/styles/global.css
@@ -27,6 +27,37 @@ body {
   }
 }
 
+@keyframes marquee-left {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes marquee-up {
+  from {
+    transform: translateY(0%);
+  }
+  to {
+    transform: translateY(-100%);
+  }
+}
+
+/* Tailwind Animation Utilities */
+.animate-marquee-left {
+  animation: marquee-left 30s linear infinite;
+}
+
+.animate-marquee-up {
+  animation: marquee-up 30s linear infinite;
+}
+
+.direction-reverse {
+  animation-direction: reverse;
+}
+
 /* Typography */
 
 p {
